--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ longtitle:        肉包子的知识树
 author:           肉包子
 email:            liangkuaiqianderoubaozi@gmail.com
 description: >
-  白嫖使人快乐.
+  记录生活使人快乐.
 
 version:          1.0
 gitbook_version:  3.2.3
